--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "package_name": "Newtonsoft.Json",
     "repository_url": "https://packages.nuget.org/api/v2",
-    "test_mode": true,
+    "test_mode": false,
     "output_file": "dependencies.png",
     "ascii_tree": false,
-    "max_depth": 5
+    "max_depth": 2
 }
